40) kernel: usb: qcserial: add HP lt4111 LTE/EV-DO/HSPA+ Gobi 4G Module.<br>
41) kernel: net: net_sched: sfq: put sfq_unlink in a do - while loop.<br>
42) kernel: net: net_sched: Pass the skb into change so it can access NETLINK_CB.<br>
43) kernel: net: net_sched: fix error return code in fw_change_attrs().<br>
44) kernel: net: net_sched: sch_htb: let skb->priority refer to non-leaf class.<br>
45) kernel: net: ipv6: ip6_fragment: fix headroom tests and skb leak.<br>
46) kernel: net: route: prevent oops.<br>
47) kernel: net: fix crashes on pppoe disconnect/reconnect.<br>
48) kernel: ppp: fix lockdep splat in ppp_dev_uninit().<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~98%).<br>
2) need add in UI for complex qos variable QoSMode (shape from 0-all,1-only WAN,2-only VPN).<br>
3) need add in UI advanced EntryLifeCheck variable (how pkts TX fail before connection drop, default 512).<br>
4) need add nodogsplash config in webui->hotspot (select chillispot or nodogsplash mode).<br>
5) need review, experiments with new roaming code in MT76x2 driver and implement to WebUI.<br>
6) need add tx beamforming parametrs in WebUi Basic if CONFIG_RT_SECOND_CARD=7612 or CONFIG_RT_FIRST_CARD=7602 (ITxBfEn,ETxBfeeEn,ETxBfEnCond variables 0/1, see rtmp.h).<br>
7) need add multiif support in iappd daemon.<br>
8) need add subchannel select for 5GHz module.<br>
9) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
10) port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
11) in fair faif future: need add in firewall support xt_time matches for parental control.<br>
12) in fair faif future: need add davfs2 webui for managment online disk drives (as yandex disk and others very slow, really need?).<br>
13) in fair fair future: need add scripts and webui for support 3g usb dongles uses qmi protocol.<br>
14) in fair fair future: need add perip shaper script and webui .<br>
<br>
<br>
<br>